--- a/sass/halfMem.scss
+++ b/sass/halfMem.scss
@@ -9,7 +9,7 @@
 @import 'modules/_header.scss';
 @import 'modules/_footer.scss';
 @import 'modules/_btns.scss';
-@import 'modules/_member.scss';
-@import 'respond/_memberMedium.scss';
-@import 'respond/_memberSmall.scss';
+@import 'modules/_halfMem.scss';
+@import 'respond/_halfMemberMedium.scss';
+@import 'respond/_halfMemberSmall.scss';
 @import 'respond/_footerSmall.scss';
