--- a/css/halfMem.css
+++ b/css/halfMem.css
@@ -73,108 +73,6 @@ body {
   letter-spacing: 3px;
 }
 
-.fa-mars {
-  color: deepskyblue;
-}
-
-.fa-venus {
-  color: #fc516d;
-}
-
-.defaultBtn {
-  font-size: 16px;
-  border: #333 2px solid;
-  border-radius: 24px;
-  color: #333;
-  padding: 4px 30px;
-  background-color: transparent;
-  cursor: pointer;
-  transition: .3s all;
-  outline: none;
-}
-
-.defaultBtn:hover {
-  color: white;
-  background-color: #EAAF88;
-  border-color: #EAAF88;
-}
-
-.btn-more {
-  width: 160px;
-  text-align: center;
-  height: 40px;
-  line-height: 40px;
-  background-color: #fff;
-  text-decoration: none;
-  color: #333;
-  position: relative;
-  overflow: hidden;
-  z-index: 2;
-  font-family: notoSans_r;
-}
-
-.btn-more:hover {
-  color: #fff;
-}
-
-.btn-more:before {
-  width: 100%;
-  height: 100%;
-  display: inline-block;
-  content: '';
-  position: absolute;
-  left: -100%;
-  background-color: transparent;
-  transition: .3s;
-  z-index: -1;
-}
-
-.btn-more:hover:before {
-  left: 0;
-  background-color: #333;
-}
-
-.btn-more:after {
-  margin-top: -7px;
-  width: 7px;
-  height: 13px;
-  background: url(../images/icon01.png) no-repeat right center;
-  position: absolute;
-  top: 50%;
-  right: 18px;
-  content: "";
-}
-
-.breadcrumbs {
-  margin-bottom: 40px;
-  font-size: 18px;
-}
-
-.breadcrumbs a {
-  font-size: 14px;
-  text-decoration: none;
-  border-width: 1px;
-  padding: 4px 10px;
-  text-align: center;
-}
-
-@media all and (max-width: 767px) {
-  .breadcrumbs {
-    margin-top: 40px;
-    margin-bottom: 40px;
-    text-align: center;
-  }
-  .breadcrumbs a {
-    border: none;
-    padding: 0;
-  }
-  .breadcrumbs a:hover {
-    color: #333;
-    background-color: transparent;
-    border-color: transparent;
-  }
-}
-
 .container {
   max-width: 991px;
   margin: 0 auto;
@@ -430,17 +328,17 @@ footer span {
   color: #fff;
 }
 
-header ul li:nth-child(2) {
+header ul li:nth-child(5) {
   background-color: #fff;
   box-shadow: -3px 3px 5px rgba(63, 62, 62, 0.199);
 }
 
-header ul li:nth-child(2) a {
+header ul li:nth-child(5) a {
   color: #333;
   font-family: notoSans_r;
 }
 
-header ul li:nth-child(2):after {
+header ul li:nth-child(5):after {
   z-index: -1;
   content: '';
   display: block;
@@ -455,148 +353,171 @@ header ul li:nth-child(2):after {
 }
 
 .right {
-  position: relative;
   margin-left: 200px;
-  padding-bottom: 50px;
-  background-image: url(../images/marble.jpg);
+  background-image: url(../../images/marble.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  z-index: 0;
+}
+
+.right:after {
+  content: '';
+  display: block;
+  clear: both;
 }
 
 .right h2 {
-  font-size: 36px;
   text-align: center;
-  padding: 50px 0;
-  letter-spacing: 15px;
+  font-size: 30px;
   font-weight: bold;
+  padding: 50px 0;
 }
 
-.right .searchsection {
-  margin: 40px 0;
+.right .leftselect {
+  width: 30%;
+  float: left;
+  margin-right: 30px;
 }
 
-.right .searchsection .formInsert {
+.right .leftselect img {
+  width: 100%;
+}
+
+.right .leftselect .leftlist {
+  width: 100%;
+}
+
+.right .leftselect .leftlist li {
+  list-style: none;
+  margin: 0 10px;
+  padding: 20px 0 20px 10px;
+  font-size: 18px;
+  border-bottom: 1px dotted #999999;
+  color: #c2740f;
+  cursor: pointer;
+}
+
+.right .leftselect .leftlist li:hover {
+  color: #0f71c2;
+}
+
+.right .leftselect .leftlist li:first-child {
+  color: #0f71c2;
+}
+
+.right .leftselect .leftbottom {
+  margin-bottom: 260px;
+}
+
+.right .content {
+  width: 65%;
+  float: left;
+  margin-bottom: 50px;
+}
+
+.right .content h4 {
+  text-align: center;
+  font-size: 24px;
+  margin-bottom: 30px;
+}
+
+.right .content .halfMemInfo form {
+  width: 100%;
+}
+
+.right .content .halfMemInfo form table {
+  width: 100%;
+}
+
+.right .content .halfMemInfo form tr {
+  width: 100%;
   text-align: center;
 }
 
-.right .searchsection .formInsert .select:hover {
-  color: #000;
-  background-color: transparent;
-  border-color: #000;
+.right .content .halfMemInfo form th {
+  width: 35%;
+  text-align: center;
+  background-color: #f2f2f2;
+  border: 2px solid #ccc;
+  padding: 15px;
 }
 
-.right .searchsection .formInsert .searchBtn {
-  height: 38px;
+.right .content .halfMemInfo form td {
+  width: 63%;
+  border: 2px solid #ccc;
+  padding: 15px;
 }
 
-.right .searchsection .formInsert .searchBar {
-  width: 260px;
-  height: 38px;
-  border-radius: 100px;
-  border: 2px solid black;
-  font-size: 14px;
-  text-indent: 4px;
-  margin-right: 6px;
-  background-color: transparent;
-}
-
-.right .searchsection .formInsert .searchBar:focus {
-  outline: none;
-}
-
-.right .searchsection .formInsert .searchBar:-ms-input-placeholder {
-  font-size: 14px;
-  line-height: 30px;
-  letter-spacing: 4px;
-  padding: 5px 15px;
-}
-
-.right .searchsection .formInsert .searchBar:-moz-placeholder {
-  font-size: 14px;
-  line-height: 30px;
-  letter-spacing: 4px;
-  padding: 5px 15px;
-}
-
-.right .searchsection .formInsert .searchBar::-moz-placeholder {
-  font-size: 14px;
-  line-height: 30px;
-  letter-spacing: 4px;
-  padding: 5px 15px;
-}
-
-.right .searchsection .formInsert .searchBar::-webkit-input-placeholder {
-  font-size: 14px;
-  line-height: 30px;
-  letter-spacing: 4px;
-  padding: 5px 15px;
-}
-
-.right .result .container .item {
+.right .content .halfMemInfo form td input {
   width: 90%;
-  margin: 200px auto 150px auto;
-  position: relative;
+  height: 30px;
+  border: none;
 }
 
-.right .result .container .item .text {
-  width: 50%;
-  background-color: #fff;
-  font-size: 14px;
-  line-height: 30px;
-  padding: 0 0 3% 5%;
-  box-shadow: 12px 10px 20px -10px #333;
-}
-
-.right .result .container .item .text h3 {
-  font-size: 24px;
-  padding: 8% 0;
-  letter-spacing: 10px;
-}
-
-.right .result .container .item .text a {
-  display: flex;
-  justify-content: flex-end;
-  margin-right: 25px;
-  text-decoration: none;
-  color: #EAAF88;
-}
-
-.right .result .container .item .text a:hover {
-  color: #333;
-}
-
-.right .result .container .item .pic {
-  position: absolute;
-  top: -40px;
-  left: 50%;
-  box-shadow: 12px 10px 20px -10px #333;
-}
-
-.right .result .container .item .pic img {
+.right .content .halfMemCat form {
   width: 100%;
 }
 
-.right .result .container .item .bg {
-  position: absolute;
-  top: 13%;
-  left: 5%;
+.right .content .halfMemCat form table {
   width: 100%;
-  height: 120%;
-  box-shadow: 12px 10px 10px -4px #aaa;
-  z-index: -3;
 }
 
-.right .result .container .item .bg1 {
-  background-color: rgba(66, 136, 115, 0.767);
+.right .content .halfMemCat form tr {
+  text-align: center;
 }
 
-.right .result .container .item .bg2 {
-  background-color: rgba(199, 79, 73, 0.767);
+.right .content .halfMemCat form th {
+  width: 30%;
+  text-align: center;
+  background-color: #f2f2f2;
+  border: 2px solid #ccc;
+  padding: 20px;
 }
 
-.right .result .container .item .bg3 {
-  background-color: rgba(139, 105, 73, 0.767);
+.right .content .halfMemCat form td {
+  border: 2px solid #ccc;
+  padding: 20px;
+}
+
+.right .content .halfMemCat form td input {
+  width: 90%;
+  height: 30px;
+  border: none;
+}
+
+.right .content .halfMemCat form td .radio {
+  width: 10%;
+  height: 15px;
+}
+
+.right .content .halfMemCat form td .simple {
+  width: 80%;
+}
+
+.right .content .halfMemCat form #simple {
+  padding: 10px;
+}
+
+.right .content .halfMemCat form #simple p {
+  padding: 10px 0;
+}
+
+.right .content .halfMemAdopt form th {
+  text-align: center;
+  background-color: #f2f2f2;
+  border: 2px solid #ccc;
+  padding: 15px;
+}
+
+.right .content .halfMemAdopt form td {
+  border: 2px solid #ccc;
+  padding: 20px;
+  text-align: center;
+}
+
+.right .content .halfMemAdopt form td .fa-trash {
+  font-size: 16.8px;
+  color: firebrick;
+  cursor: pointer;
 }
 
 @media all and (min-width: 768px) and (max-width: 991px) {
@@ -606,33 +527,10 @@ header ul li:nth-child(2):after {
   .right {
     margin: 0;
   }
-  .right .result .container .item {
-    width: 80%;
-    margin: 50px auto 100px auto;
-  }
-  .right .result .container .item:after {
-    content: '';
-    display: block;
-    clear: both;
-  }
-  .right .result .container .item .text {
-    width: 100%;
-    color: #ddd;
-  }
-  .right .result .container .item .tx1 {
-    background-color: rgba(66, 136, 115, 0.767);
-  }
-  .right .result .container .item .tx2 {
-    background-color: rgba(199, 79, 73, 0.767);
-  }
-  .right .result .container .item .tx3 {
-    background-color: rgba(139, 105, 73, 0.767);
-  }
-  .right .result .container .item .pic {
-    position: static;
-  }
-  .right .result .container .item .bg {
-    display: none;
+  .right .leftselect {
+    width: 25%;
+    float: left;
+    margin: 0 20px;
   }
 }
 
@@ -643,45 +541,29 @@ header ul li:nth-child(2):after {
   .right {
     margin: 0;
   }
-  .right h2 {
-    padding: 30px 0;
-  }
-  .right .searchsection .container .formInsert {
-    margin: 25px 0;
-  }
-  .right .searchsection .container .formInsert .select {
-    display: block;
-    margin: 0 auto;
-    margin-bottom: 30px;
-  }
-  .right .result .container .item {
-    width: 80%;
-    margin: 50px auto 100px auto;
-  }
-  .right .result .container .item:after {
-    content: '';
-    display: block;
-    clear: both;
-  }
-  .right .result .container .item .text {
-    width: 100%;
-    color: #ddd;
-  }
-  .right .result .container .item .tx1 {
-    background-color: rgba(66, 136, 115, 0.767);
-  }
-  .right .result .container .item .tx2 {
-    background-color: rgba(199, 79, 73, 0.767);
-  }
-  .right .result .container .item .tx3 {
-    background-color: rgba(139, 105, 73, 0.767);
-  }
-  .right .result .container .item .pic {
-    position: static;
-  }
-  .right .result .container .item .bg {
-    display: none;
+  .right .leftselect {
+    width: 25%;
+    float: left;
+    margin: 0 20px;
   }
 }
 
-/*# sourceMappingURL=halfway_house_search.css.map */
+@media all and (min-width: 768px) and (max-width: 991px) {
+  footer {
+    margin-left: 0;
+    width: 100%;
+  }
+}
+
+@media all and (max-width: 767px) {
+  footer {
+    margin-left: 0;
+    width: 100%;
+  }
+  footer span {
+    display: block;
+    text-align: center;
+  }
+}
+
+/*# sourceMappingURL=halfMem.css.map */
