--- a/sass/modules/_halfMem.scss
+++ b/sass/modules/_halfMem.scss
@@ -15,7 +15,7 @@
         width: 30%;
         float: left;
         margin-right: 30px;
-        img {
+        img{
             width: 100%;
         }
         .leftlist {
@@ -49,7 +49,7 @@
             font-size: $font-size-h3;
             margin-bottom: 30px;
         }
-        .memInfo {
+        .halfMemInfo {
             form {
                 width: 100%;
                 table {
@@ -60,16 +60,16 @@
                     text-align: center;
                 }
                 th {
-                    width: 30%;
+                    width: 35%;
                     text-align: center;
-                    background-color: rgba(255, 255, 255, 0.5);
+                    background-color: rgb(242, 242, 242);
                     border: 2px solid #ccc;
-                    padding: 20px;
+                    padding: 15px;
                 }
                 td {
                     width: 63%;
                     border: 2px solid #ccc;
-                    padding: 20px;
+                    padding: 15px;
                     input {
                         width: 90%;
                         height: 30px;
@@ -78,20 +78,9 @@
                 }
             }
         }
-        .memOrderlist {
-            font-size: $font-size-h4;
-            h5 {
-                margin-bottom: 20px;
-            }
-            p {
-                margin-bottom: 20px;
-            }
-            span {
-                color: rgb(235, 47, 47);
-            }
+        .halfMemCat {
             form {
                 width: 100%;
-                margin: 30px auto;
                 table {
                     width: 100%;
                 }
@@ -99,13 +88,48 @@
                     text-align: center;
                 }
                 th {
+                    width: 30%;
+                    text-align: center;
                     background-color: rgb(242, 242, 242);
-                    border: 1px solid #ccc;
-                    padding: 20px 0 20px 0;
+                    border: 2px solid #ccc;
+                    padding: 20px;
                 }
                 td {
-                    border: 1px solid #ccc;
-                    padding: 20px 0 20px 0;
+                    border: 2px solid #ccc;
+                    padding: 20px;
+                    input {
+                        width: 90%;
+                        height: 30px;
+                        border: none;
+                    }
+                    .radio {
+                        width: 10%;
+                        height: 15px;
+                    }
+                    .simple {
+                        width: 80%;
+                    }
+                }
+                #simple {
+                    padding: 10px;
+                    p {
+                        padding: 10px 0;
+                    }
+                }
+            }
+        }
+        .halfMemAdopt {
+            form {
+                th {
+                    text-align: center;
+                    background-color: rgb(242, 242, 242);
+                    border: 2px solid #ccc;
+                    padding: 15px;
+                }
+                td {
+                    border: 2px solid #ccc;
+                    padding: 20px;
+                    text-align: center;
                     .fa-trash {
                         font-size: $font-size-base*1.2;
                         color: firebrick;
