--- a/css/backHalfway.css
+++ b/css/backHalfway.css
@@ -346,17 +346,17 @@ header .icons a:hover {
   }
 }
 
-header ul li:nth-child(2) {
+header ul li:nth-child(3) {
   background-color: #fff;
   box-shadow: -3px 3px 5px rgba(63, 62, 62, 0.199);
 }
 
-header ul li:nth-child(2) a {
+header ul li:nth-child(3) a {
   color: #333;
   font-family: notoSans_r;
 }
 
-header ul li:nth-child(2):after {
+header ul li:nth-child(3):after {
   z-index: -1;
   content: '';
   display: block;
@@ -403,45 +403,65 @@ header {
   max-width: 1000px;
 }
 
-.right .container1 .empManage {
+.right .container1 .adoptInfomation {
   width: 80%;
   margin: 100px auto 100px;
 }
 
-.right .container1 .empManage button {
+.right .container1 .adoptInfomation select {
   display: block;
-  margin-left: auto;
-  margin-right: 0;
 }
 
-.right .container1 .empManage table {
+.right .container1 .adoptInfomation table {
   width: 100%;
   margin: 40px auto 60px;
 }
 
-.right .container1 .empManage table .newEmpTROff {
-  display: none;
-}
-
-.right .container1 .empManage table .newEmpTROn {
-  display: table-row;
-}
-
-.right .container1 .empManage table tr {
+.right .container1 .adoptInfomation table tr {
   border-bottom: 1px solid #333;
 }
 
-.right .container1 .empManage table tr th,
-.right .container1 .empManage table tr td {
+.right .container1 .adoptInfomation table tr th,
+.right .container1 .adoptInfomation table tr td {
   padding-top: 16px;
   padding-bottom: 8px;
   font-size: 14px;
 }
 
-.right .container1 .empManage table tr th {
+.right .container1 .adoptInfomation table tr th .fa-trash,
+.right .container1 .adoptInfomation table tr td .fa-trash {
+  font-size: 16.8px;
+  color: firebrick;
+  cursor: pointer;
+}
+
+.right .container1 .adoptInfomation table tr th .fa-circle-o,
+.right .container1 .adoptInfomation table tr td .fa-circle-o {
+  font-size: 16.8px;
+  color: dodgerblue;
+  cursor: pointer;
+}
+
+.right .container1 .adoptInfomation table tr th .fa-times,
+.right .container1 .adoptInfomation table tr td .fa-times {
+  font-size: 16.8px;
+  color: crimson;
+  cursor: pointer;
+}
+
+.right .container1 .adoptInfomation table tr th {
   font-size: 18px;
   letter-spacing: 2px;
   font-weight: bold;
 }
 
-/*# sourceMappingURL=backEmpManage.css.map */
+.right .container1 .adoptInfomation a {
+  text-align: center;
+  text-decoration: none;
+  padding: 2px;
+  border-radius: 0px;
+  border-width: 1px;
+  padding-left: 5px;
+}
+
+/*# sourceMappingURL=backHalfway.css.map */
