--- a/sass/modules/_halfMem.scss
+++ b/sass/modules/_halfMem.scss
@@ -5,6 +5,13 @@
     background-image: url(../../images/marble.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    .bigImg {
+        height: 40vh;
+        background-image: url(../images/cutecatbg3.jpg);
+        background-size: cover;
+        background-position: center;
+        background-repeat: no-repeat;
+    }
     h2 {
         text-align: center;
         font-size: $font-size-h2;
@@ -40,10 +47,16 @@
             margin-bottom: 260px;
         }
     }
+    .smalllist{
+        display: none;
+    }
     .content {
         width: 65%;
         float: left;
-        margin-bottom: 50px;
+        padding-bottom: 50px;
+        textarea{
+            resize: none;
+        }
         h4 {
             text-align: center;
             font-size: $font-size-h3;
@@ -120,6 +133,9 @@
         }
         .halfMemAdopt {
             form {
+                table{
+                    width: 100%;
+                }
                 th {
                     text-align: center;
                     background-color: rgb(242, 242, 242);
