--- a/css/halfMem.css
+++ b/css/halfMem.css
@@ -365,6 +365,14 @@ header ul li:nth-child(5):after {
   clear: both;
 }
 
+.right .bigImg {
+  height: 40vh;
+  background-image: url(../images/cutecatbg3.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
 .right h2 {
   text-align: center;
   font-size: 30px;
@@ -408,10 +416,18 @@ header ul li:nth-child(5):after {
   margin-bottom: 260px;
 }
 
+.right .smalllist {
+  display: none;
+}
+
 .right .content {
   width: 65%;
   float: left;
-  margin-bottom: 50px;
+  padding-bottom: 50px;
+}
+
+.right .content textarea {
+  resize: none;
 }
 
 .right .content h4 {
@@ -501,6 +517,10 @@ header ul li:nth-child(5):after {
   padding: 10px 0;
 }
 
+.right .content .halfMemAdopt form table {
+  width: 100%;
+}
+
 .right .content .halfMemAdopt form th {
   text-align: center;
   background-color: #f2f2f2;
@@ -528,9 +548,36 @@ header ul li:nth-child(5):after {
     margin: 0;
   }
   .right .leftselect {
-    width: 25%;
-    float: left;
-    margin: 0 20px;
+    display: none;
+  }
+  .right .smalllist {
+    display: block;
+  }
+  .right .smalllist ul {
+    text-align: center;
+  }
+  .right .smalllist ul li {
+    width: 18%;
+    display: inline-block;
+    padding: 10px 0;
+    border-bottom: 2px dotted #c2740f;
+    cursor: pointer;
+  }
+  .right .smalllist ul li:hover {
+    color: #0f71c2;
+  }
+  .right .smalllist ul li:first-child {
+    color: #0f71c2;
+  }
+  .right .content {
+    width: 80%;
+    float: none;
+    margin: 50px auto 0 auto;
+    padding-bottom: 50px;
+  }
+  .right .content .halfMemInfo textarea {
+    width: 90%;
+    height: 200px;
   }
 }
 
@@ -542,9 +589,36 @@ header ul li:nth-child(5):after {
     margin: 0;
   }
   .right .leftselect {
-    width: 25%;
-    float: left;
-    margin: 0 20px;
+    display: none;
+  }
+  .right .smalllist {
+    display: block;
+  }
+  .right .smalllist ul {
+    text-align: center;
+  }
+  .right .smalllist ul li {
+    width: 18%;
+    display: inline-block;
+    padding: 10px 0;
+    border-bottom: 2px dotted #c2740f;
+    cursor: pointer;
+  }
+  .right .smalllist ul li:hover {
+    color: #0f71c2;
+  }
+  .right .smalllist ul li:first-child {
+    color: #0f71c2;
+  }
+  .right .content {
+    width: 80%;
+    float: none;
+    margin: 50px auto 0 auto;
+    padding-bottom: 50px;
+  }
+  .right .content .halfMemInfo textarea {
+    width: 90%;
+    height: 200px;
   }
 }
 
