--- a/sass/respond/_halfMemberMedium.scss
+++ b/sass/respond/_halfMemberMedium.scss
@@ -5,9 +5,38 @@
     .right {
         margin: 0;
         .leftselect {
-            width: 25%;
-            float: left;
-            margin: 0 20px;
+            display: none;
+        }
+        .smalllist {
+            display: block;
+            ul {
+                text-align: center;
+                li {
+                    width: 18%;
+                    display: inline-block;
+                    padding: 10px 0;
+                    border-bottom: 2px dotted #c2740f;
+                    cursor: pointer;
+                    &:hover {
+                        color: #0f71c2;
+                    }
+                    &:first-child {
+                        color: #0f71c2;
+                    }
+                }
+            }
+        }
+        .content {
+            width: 80%;
+            float: none;
+            margin: 50px auto 0 auto;
+            padding-bottom: 50px;
+            .halfMemInfo {
+                textarea {
+                    width: 90%;
+                    height: 200px;
+                }
+            }
         }
     }
 }
