--- a/sass/signUp.scss
+++ b/sass/signUp.scss
@@ -16,16 +16,14 @@ $colorPlaceholder: hsla(0, 0%, 96%, 0.7);
     width: 100vw;
     height: 100vh;
     position: fixed;
-    z-index: 1000;
-    display: none;
+    z-index: 1000; // display: none;
 }
 
 .signUpLightbox {
     width: 800px;
     height: 600px;
     z-index: 1001;
-    position: fixed;
-    display: none;
+    position: fixed; // display: none;
     .cancel {
         position: absolute;
         top: 5px;
@@ -65,6 +63,7 @@ $colorPlaceholder: hsla(0, 0%, 96%, 0.7);
                 outline: none;
                 color: $colorPlaceholder;
                 font-size: $font-size-h2;
+                cursor: pointer;
                 &:hover {
                     color: #fff;
                 }
@@ -103,6 +102,7 @@ $colorPlaceholder: hsla(0, 0%, 96%, 0.7);
                 transition: .3s;
                 color: #333;
                 margin: 0 auto 30px;
+                cursor: pointer;
                 &:hover {
                     background-color: $navColor;
                     border: 1px solid $navColor;
@@ -150,6 +150,24 @@ $colorPlaceholder: hsla(0, 0%, 96%, 0.7);
                 display: inline-block;
                 width: 100px;
                 font-size: $font-size-base;
+            }
+        }
+        .signInUpPos {
+            width: 165px;
+            position: absolute;
+            left: 50%;
+            margin-left: -82.5px;
+            bottom: 14px;
+            color: #eee;
+            font-size: $font-size-small;
+            button {
+                background-color: transparent;
+                padding: 0;
+                border: none;
+                color: #eee;
+                border-bottom: #eee 1px solid;
+                cursor: pointer;
+                outline: none;
             }
         }
     }
