--- a/sass/modules/_header.scss
+++ b/sass/modules/_header.scss
@@ -75,28 +75,30 @@ header {
         }
     }
 }
-
+.hb{
+    position: fixed;
+    z-index: 999999999;
+    background-color: rgba(238, 237, 237, 0.808);
+    padding: 5px;
+    border-radius: 5px;
+    display: none;
+    top: 30px;
+    right: 30px;
+}
 header.active{
     top: 0;
     transition: .6s;
 }
 
 .hamburger .line {
-    width: 50px;
-    height: 5px;
+    width: 40px;
+    height: 4px;
     background-color: #2c3e50;
     display: block;
     margin: 8px auto;
     -webkit-transition: all 0.3s ease-in-out;
     -o-transition: all 0.3s ease-in-out;
     transition: all 0.3s ease-in-out;
-}
-.hamburger{
-    top: 30px;
-    right: 30px;
-    position: fixed;
-    z-index: 999999999;
-    display: none;
 }
 .hamburger:hover {
     cursor: pointer;
@@ -127,15 +129,15 @@ header.active{
 }
 
 #hamburger-6.is-active .line:nth-child(1) {
-    -webkit-transform: translateY(13px);
-    -ms-transform: translateY(13px);
-    -o-transform: translateY(13px);
-    transform: translateY(13px);
+    -webkit-transform: translateY(10px);
+    -ms-transform: translateY(10px);
+    -o-transform: translateY(10px);
+    transform: translateY(10px);
 }
 
 #hamburger-6.is-active .line:nth-child(3) {
-    -webkit-transform: translateY(-13px) rotate(90deg);
-    -ms-transform: translateY(-13px) rotate(90deg);
-    -o-transform: translateY(-13px) rotate(90deg);
-    transform: translateY(-13px) rotate(90deg);
+    -webkit-transform: translateY(-14px) rotate(90deg);
+    -ms-transform: translateY(-14px) rotate(90deg);
+    -o-transform: translateY(-14px) rotate(90deg);
+    transform: translateY(-14px) rotate(90deg);
 }
