--- a/sass/respond/_indexMedium.scss
+++ b/sass/respond/_indexMedium.scss
@@ -3,6 +3,16 @@
         margin-left: 0;
     }
     .banner{
+        .find{
+            padding-left: 0;
+            padding-right: 0;
+            padding-bottom: 0;
+        }
+        .wait{
+            padding-left: 0;
+            padding-right: 0;
+            padding-bottom: 0;
+        }
         .findBox{
             display: block;
             text-align: center;
