--- a/sass/modules/_header.scss
+++ b/sass/modules/_header.scss
@@ -79,7 +79,7 @@ header {
     position: fixed;
     z-index: 999999999;
     background-color: rgba(238, 237, 237, 0.808);
-    padding: 5px;
+    padding: 2px 5px;
     border-radius: 5px;
     display: none;
     top: 30px;
