--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -496,6 +496,7 @@
             z-index: 0;
             transition: .3s;
             opacity: 0;
+            border-radius: 10px;
             .hint{
                 width: 80%;
                 border: 2px #000 solid;
@@ -511,6 +512,8 @@
                 border-radius: 10px;
                 border: 2px solid #000;
                 cursor: pointer;
+                position: relative;
+                top: -10px;
             }
         }
         .option-area-a,
@@ -542,7 +545,7 @@
             width: 70px;
             height: 108x;
             left: 0;
-            bottom: 60px;
+            bottom: 8vh;
             transition: .3s;
         }
         .hug {
@@ -551,7 +554,7 @@
             height: 102px;
             z-index: 1;
             right: 0;
-            bottom: 60px;
+            bottom: 8vh;
             transition: .3s ease-in-out;
         }
     }
