--- a/css/index.css
+++ b/css/index.css
@@ -794,15 +794,15 @@ header.active {
       width: 70px;
       height: 108x;
       left: 0;
-      bottom: 8vh;
+      bottom: 60px;
       transition: .3s; }
     .game-point .game-point-bottom .hug {
       position: relative;
-      width: 70px;
+      width: 80px;
       height: 102px;
       z-index: 1;
       right: 0;
-      bottom: 8vh;
+      bottom: 60px;
       transition: .3s ease-in-out; }
 
 #loading {
