--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -544,16 +544,16 @@
             width: 70px;
             height: 108x;
             left: 0;
-            bottom: 8vh;
+            bottom: 60px;
             transition: .3s;
         }
         .hug {
             position: relative;
-            width: 70px;
+            width: 80px;
             height: 102px;
             z-index: 1;
             right: 0;
-            bottom: 8vh;
+            bottom: 60px;
             transition: .3s ease-in-out;
         }
     }
