--- a/sass/respond/_indexSmall.scss
+++ b/sass/respond/_indexSmall.scss
@@ -14,4 +14,16 @@
             width: 600%;
         }
     }
+    .half{
+        .half-qty{
+            img {
+                width: 30px;
+                height: 41.25px;
+                margin: 0 5px;
+            }
+            span{
+                align-self: flex-end;
+            }
+        }
+    }
 }
