--- a/css/forum-p1.css
+++ b/css/forum-p1.css
@@ -62,6 +62,7 @@ header {
   width: 200px;
   height: 100vh;
   position: fixed;
+  top: 0;
   padding-left: 15px;
   box-shadow: 2px 0 10px rgba(153, 153, 153, 0.315);
   z-index: 9999999;
@@ -181,7 +182,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
-  display: inline-block;
+  display: block;
   text-align: center;
   width: 100%;
   min-height: 100%;
@@ -190,94 +191,46 @@ body {
   font-size: 16px;
 }
 
-.forum-title:hover {
-  cursor: pointer;
-  color: #EAAF88;
-}
-
 h1 {
   font-size: 28px;
+  margin-top: 2%;
   transition: .3s;
 }
 
-.rwd-img {
-  max-width: 100%;
-  height: auto;
+h2 {
+  text-align: left;
+  font-size: 24px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #ccc;
 }
 
 .container {
-  max-width: 991px;
-  margin: 0 auto;
-  margin-top: 5%;
-}
-
-.row {
-  display: table;
-  margin-top: 40px;
-}
-
-.col {
-  display: table-cell;
-}
-
-.forum-list {
-  margin-top: 5%;
-}
-.forum-list li {
-  letter-spacing: 2px;
-  padding: 20px 0;
-  margin: 0 10px;
-  width: 25%;
-  border: 2px solid black;
-  display: inline-block;
-}
-.forum-list li:hover {
-  cursor: pointer;
-  color: #fff;
-  border: 2px solid #ccc;
-  background-color: #EAAF88;
-  transition: .3s;
-}
-
-.post-list {
+  padding: 2%;
   background-color: rgba(255, 255, 255, 0.6);
-  letter-spacing: 2px;
-  padding: 5%;
-  width: 39%;
   border: 2px solid #ccc;
-}
-.post-list li {
-  margin-top: 6%;
-  text-align: left;
-}
-.post-list li a {
-  color: #000;
-}
-.post-list li a:hover {
-  cursor: pointer;
-  color: #EAAF88;
-  transition: .3s;
-}
-.post-list li:last-child {
-  margin-top: 15%;
-  text-align: right;
-}
-
-.cat-img {
-  padding: 5px;
-  width: 59%;
-  background-color: #fff;
-}
-
-.post-header {
-  text-align: left;
-}
-.post-header::after {
-  content: "";
-  display: block;
-  margin: 10% auto;
+  max-width: 991px;
   width: 100%;
-  border-bottom: 2px solid #ccc;
+  margin: 0 auto;
+  margin-top: 3%;
+}
+
+.post-ab {
+  text-align: left;
+}
+.post-ab span {
+  margin: 1%;
+  opacity: .7;
+}
+
+.post-body {
+  text-align: left;
+  padding: 2%;
+  margin-top: 2%;
+}
+
+.post-ft {
+  margin-top: 2%;
+  text-align: right;
 }
 
 .btn {
@@ -303,135 +256,16 @@ h1 {
   header {
     display: none;
   }
-
-  .post-header {
-    margin-top: 5%;
-  }
-
-  .post-list {
-    padding: 2%;
-  }
-}
-@media screen and (min-width: 652px) {
-  .fbox .row:nth-child(2) .col {
-    position: relative;
-  }
-  .fbox .row:nth-child(2) .cat-img {
-    right: -40%;
-  }
-  .fbox .row:nth-child(2) .post-list {
-    right: 60%;
-  }
-}
-@media screen and (max-width: 829px) {
-  .post-header {
-    margin-top: 3%;
-  }
-  .post-header::after {
-    margin: 5% auto;
-  }
 }
 @media screen and (max-width: 651px) {
   h1 {
     font-size: 20px;
   }
 
-  .forum-list li {
-    letter-spacing: 1px;
-    padding: 3% 0;
-    margin: 0 1%;
-  }
-
-  .row {
-    margin-top: 10%;
-  }
-
-  .col {
-    width: 95%;
-    display: block;
-    margin: 0 auto;
+  h2 {
+    font-size: 18px;
   }
 }
-.po-list {
-  margin: 0 3%;
-  padding: 2%;
-  background-color: rgba(255, 255, 255, 0.6);
-  border: 1px solid rgba(0, 0, 0, 0.1);
-}
-
-.po-title {
-  text-align: left;
-  display: inline-block;
-  width: 65%;
-}
-.po-title a {
-  color: #000;
-}
-.po-title a:hover {
-  cursor: pointer;
-  color: #EAAF88;
-  transition: .3s;
-}
-.po-title h3 {
-  display: inline-block;
-  margin-left: 5%;
-}
-
-.po-time {
-  display: inline-block;
-  width: 34%;
-  text-align: right;
-}
-.po-time span {
-  margin: 0 5%;
-}
-
-@media screen and (max-width: 465px) {
-  .po-title {
-    width: 100%;
-    display: block;
-  }
-
-  .po-time {
-    width: 100%;
-    margin-top: 5px;
-    margin-left: 4%;
-  }
-}
-.f-active {
-  color: #fff;
-  border: 2px solid #ccc;
-  background-color: #EAAF88;
-  transition: .3s;
-}
-
-.fbox {
-  visibility: hidden;
-  height: 1px;
-  overflow: hidden;
-  position: absolute;
-  width: 1px;
-  opacity: 0;
-}
-
-.pbox {
-  visibility: hidden;
-  height: 1px;
-  overflow: hidden;
-  position: absolute;
-  width: 1px;
-  opacity: 0;
-}
-
-.s-active {
-  visibility: visible;
-  position: relative;
-  width: 100%;
-  height: 100%;
-  opacity: 1;
-  transition: opacity 2s;
-}
-
 .postfrom {
   max-width: 991px;
   width: 100%;
@@ -467,4 +301,4 @@ h1 {
   text-align: right;
 }
 
-/*# sourceMappingURL=forum.css.map */
+/*# sourceMappingURL=forum-p1.css.map */
