--- a/css/index.css
+++ b/css/index.css
@@ -746,7 +746,7 @@ header.active {
       align-items: center;
       position: absolute;
       width: 100%;
-      height: 100%;
+      min-height: 100%;
       background-color: #effafc;
       border: 2px solid #000;
       z-index: 0;
@@ -1026,4 +1026,10 @@ header.active {
   .banner .search select, .banner .search input {
     font-size: 16px; }
   .pick-kit ul {
-    width: 600%; } }
+    width: 600%; }
+  .half .half-qty img {
+    width: 30px;
+    height: 41.25px;
+    margin: 0 5px; }
+  .half .half-qty span {
+    align-self: flex-end; } }
