--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -489,7 +489,7 @@
             align-items: center;
             position: absolute;
             width: 100%;
-            height: 100%;
+            min-height: 100%;
             background-color: #effafc;
             border: 2px solid #000;
             z-index: 0;
