--- a/css/index.css
+++ b/css/index.css
@@ -441,7 +441,7 @@ header.active {
       border: 3px solid #fff;
       border-radius: 40px;
       text-align-last: center;
-      padding: 3px 0;
+      padding: 3px 6px;
       font-size: 18px;
       color: #333;
       cursor: pointer; }
