--- a/sass/modules/_index.scss
+++ b/sass/modules/_index.scss
@@ -75,7 +75,7 @@
             border: 3px solid #fff;
             border-radius: 40px;
             text-align-last: center;
-            padding: 3px 0;
+            padding: 3px 6px;
             font-size: $font-size-h4;
             color: #333;
             cursor: pointer;
